<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		      android:layout_width="fill_parent"
		      android:layout_height="fill_parent"
		      android:orientation="vertical">
    
    <TextView android:layout_height="wrap_content"
        	  android:text="@string/txt_to_send" 
        	  android:layout_width="fill_parent" 
        	  android:layout_margin="20dp"
			  android:textStyle="bold">
	</TextView>
    
    <EditText android:layout_width="fill_parent"
    	      android:layout_height="wrap_content"
    	      android:id="@+id/etTextInserted"
    	      android:hint=""
    	      android:layout_marginTop="0dp"
    	      android:layout_marginLeft="20dp"
    	      android:layout_marginRight="20dp"
    	      android:layout_marginBottom="20dp"/>
                    
	<LinearLayout android:layout_height="fill_parent"
	    		  android:layout_width="fill_parent"
   				  android:weightSum="100"
				  android:orientation="horizontal" 
				  android:layout_marginTop="0dp"
    	      	  android:layout_marginLeft="20dp"
    	          android:layout_marginRight="20dp"
    	          android:layout_marginBottom="20dp">
		<Button android:id="@+id/send_ok" 
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="50"
				android:text="@string/btn_send_ok"/>
		<Button android:id="@+id/send_cancel" 
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:layout_weight="50"
			    android:text="@string/btn_send_cancel"/>					  
	</LinearLayout>
	
</LinearLayout>